tests/cases/compiler-development/artifact/errors/syntax-recovery-missing-match-close.ari
fn broken(flag: bool) -> i64 {
  match flag {
    true => {
      return 1;
    }
fn after() -> i64 {
  return 2;
}
